--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
-
   },
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.19.2",
     "nodemon": "^3.1.10"
   }
 }
